--- a/compose.yaml
+++ b/compose.yaml
@@ -66,3 +66,6 @@ services:
     # Drop all capabilities since we don't need them!
     cap_drop:
       - ALL
+
+    # Give it an hour to finish saving the world before quitting
+    stop_grace_period: 60m
