--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,21 @@ services:
     build: 
       dockerfile: Containerfile
       args:
+        # Change this to the minecraft version you want a server for!
         MINECRAFT_VERSION: "1.20.1"
+
+    # limit the resources that can be used by the server!
+    deploy:
+      resources:
+        limits:
+          cpus: 6
+          memory: 4g
+          pids: 256
+
+    ports:
+      # Open default port for minecraft server
+      - "25565:25565"
+
     volumes:
       # Needs Z on Fedora because of SELinux, see 
       # <https://docs.podman.io/en/latest/markdown/podman-run.1.html#volume-v-source-volume-host-dir-container-dir-options>
@@ -45,10 +59,6 @@ services:
       - ./data/usercache.json:/data/usercache.json:rw,Z
       - ./data/whitelist.json:/data/whitelist.json:rw,Z
 
-    ports:
-      # Open default port for minecraft server
-      - "25565:25565"
-
     # Allow us to attach to the container later
     stdin_open: true
     tty: true
@@ -61,14 +71,6 @@ services:
       # Java writes and executes from /tmp
       - /tmp:size=10M,mode=0770,nosuid,nodev
       - /data/.cache:size=100M,mode=0770,noexec,nosuid,nodev
-
-    # limit the resources that can be used!
-    deploy:
-      resources:
-        limits:
-          cpus: 6
-          memory: 4g
-          pids: 256
 
     # Drop all capabilities since we don't need them!
     cap_drop:
